--- a/roles/role_pgsql_ha_cascade/templates/postgresql.conf.j2
+++ b/roles/role_pgsql_ha_cascade/templates/postgresql.conf.j2
@@ -141,7 +141,7 @@ dynamic_shared_memory_type = posix  # the default is the first option
 
 #max_files_per_process = 1000       # min 25
                     # (change requires restart)
-shared_preload_libraries = '{{ prostgresql_extensions }}'      # (change requires restart)
+shared_preload_libraries = '{{ postgresql_shared_preload }}'      # (change requires restart)
 
 # - Cost-Based Vacuum Delay -
 
