--- a/roles/role_pgsql_ha_cascade/templates/repmgr.conf.j2
+++ b/roles/role_pgsql_ha_cascade/templates/repmgr.conf.j2
@@ -198,7 +198,7 @@ reconnect_attempts={{ postgresql_repmgr_reconnect_attempts }}
 reconnect_interval={{ postgresql_repmgr_reconnect_interval }}
 
 # Autofailover options
-failover=manual    # one of 'automatic', 'manual' (default: manual)
+failover={{ postgresql_repmgr_failover_action }}    # one of 'automatic', 'manual' (default: manual)
                     # defines the action to take in the event of upstream failure
                     #
                     # 'automatic': repmgrd will automatically attempt to promote the
@@ -217,7 +217,7 @@ follow_command='/usr/pgsql-9.5/bin/repmgr standby follow -f /etc/repmgr/9.5/repm
 # disappears, we wait 'reconnect_attempts' * 'retry_promote_interval_secs'
 # seconds; by default this would be half an hour, as 'retry_promote_interval_secs'
 # default value is 300)
-#retry_promote_interval_secs=300
+retry_promote_interval_secs={{ postgresql_repmgr_retry_promote_interval_secs }}
 
 # Number of seconds after which the witness server resyncs the repl_nodes table
 #witness_repl_nodes_sync_interval_secs=15
